crates/formatter/tests/snapshots/snapshots__synapse__main__delta__59__03shard_send_to_device_sequence.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create sequence if not exists device_inbox_sequence;

-- We need to take the max across both device_inbox and device_federation_outbox
-- tables as they share the ID generator
select
	setval(
		'device_inbox_sequence',
		(
			select
				greatest(
					(select coalesce(max(stream_id), 1) from device_inbox),
					(select coalesce(max(stream_id), 1) from device_federation_outbox)
				)
		)
	);
