crates/formatter/tests/snapshots/snapshots__synapse__main__delta__59__04_event_auth_chains.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2020 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- See docs/auth_chain_difference_algorithm.md

create table event_auth_chains (
	event_id text primary key,
	chain_id bigint not null,
	sequence_number bigint not null
);

create unique index event_auth_chains_c_seq_index
	on event_auth_chains (chain_id, sequence_number);


create table event_auth_chain_links (
	origin_chain_id bigint not null,
	origin_sequence_number bigint not null,
	target_chain_id bigint not null,
	target_sequence_number bigint not null
);


create index event_auth_chain_links_idx
	on event_auth_chain_links (origin_chain_id, target_chain_id);


-- Events that we have persisted but not calculated auth chains for,
-- e.g. out of band memberships (where we don't have the auth chain)
create table event_auth_chain_to_calculate (
	event_id text primary key,
	room_id text not null,
	type text not null,
	state_key text not null
);

create index event_auth_chain_to_calculate_rm_id
	on event_auth_chain_to_calculate (room_id);


-- Whether we've calculated the above index for a room.
alter table rooms add column has_auth_chain_index boolean;
