crates/formatter/tests/snapshots/snapshots__synapse__main__delta__59__06shard_account_data.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create sequence if not exists account_data_sequence;

-- We need to take the max across all the account_data tables as they share the
-- ID generator
select
	setval(
		'account_data_sequence',
		(
			select
				greatest(
					(select coalesce(max(stream_id), 1) from room_account_data),
					(select coalesce(max(stream_id), 1) from room_tags_revisions),
					(select coalesce(max(stream_id), 1) from account_data)
				)
		)
	);

create sequence if not exists receipts_sequence;

select
	setval(
		'receipts_sequence',
		(select coalesce(max(stream_id), 1) from receipts_linearized)
	);
